DOC: adding sparse documentation and style fixes

--- a/nbks/plugin_demo.ipynb
+++ b/nbks/plugin_demo.ipynb
@@ -42,25 +42,27 @@
        "<th>module</th><th>name</th><th>composable</th><th>doc</th><th>input type</th><th>output type</th>\n",
        "</thead>\n",
        "<tbody>\n",
+       "<tr><td><span class=\"c3col_left\">divergent.records</span></td><td><span class=\"c3col_left\">dvgt_calc</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_left\"></span></td><td><span class=\"c3col_left\">IdentifierType</span></td><td><span class=\"c3col_left\">DictArray, DistanceMatrix, Table</span></td></tr>\n",
        "<tr><td><span class=\"c3col_left\">divergent.loader</span></td><td><span class=\"c3col_left\">dvgt_load_seqs</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_left\"></span></td><td><span class=\"c3col_left\">DataMember</span></td><td><span class=\"c3col_left\">SeqArray</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_left\">divergent.data_store</span></td><td><span class=\"c3col_left\">dvgt_seq_file_to_data_store</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_left\"></span></td><td><span class=\"c3col_left\">IdentifierType</span></td><td><span class=\"c3col_left\">DataStoreABC</span></td></tr>\n",
+       "<tr><td><span class=\"c3col_left\">divergent.loader</span></td><td><span class=\"c3col_left\">dvgt_seq_file_to_data_store</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_left\"></span></td><td><span class=\"c3col_left\">IdentifierType</span></td><td><span class=\"c3col_left\">DataStoreABC</span></td></tr>\n",
        "<tr><td><span class=\"c3col_left\">divergent.writer</span></td><td><span class=\"c3col_left\">dvgt_write_prepped_seqs</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_left\"></span></td><td><span class=\"c3col_left\">SeqArray</span></td><td><span class=\"c3col_left\">IdentifierType</span></td></tr>\n",
        "</tbody>\n",
        "</table>\n",
        "<p>\n",
-       "3 rows x 6 columns</p>\n",
+       "4 rows x 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "============================================================================================================\n",
-       "module                  name                           composable    doc    input type        output type   \n",
-       "------------------------------------------------------------------------------------------------------------\n",
-       "divergent.loader        dvgt_load_seqs                 True                 DataMember        SeqArray      \n",
-       "divergent.data_store    dvgt_seq_file_to_data_store    True                 IdentifierType    DataStoreABC  \n",
-       "divergent.writer        dvgt_write_prepped_seqs        True                 SeqArray          IdentifierType\n",
-       "------------------------------------------------------------------------------------------------------------\n",
+       "===========================================================================================================================\n",
+       "module               name                           composable    doc    input type        output type                     \n",
+       "---------------------------------------------------------------------------------------------------------------------------\n",
+       "divergent.records    dvgt_calc                      True                 IdentifierType    DictArray, DistanceMatrix, Table\n",
+       "divergent.loader     dvgt_load_seqs                 True                 DataMember        SeqArray                        \n",
+       "divergent.loader     dvgt_seq_file_to_data_store    True                 IdentifierType    DataStoreABC                    \n",
+       "divergent.writer     dvgt_write_prepped_seqs        True                 SeqArray          IdentifierType                  \n",
+       "---------------------------------------------------------------------------------------------------------------------------\n",
        "\n",
-       "3 rows x 6 columns"
+       "4 rows x 6 columns"
       ]
      },
      "execution_count": 2,
