--- a/nbks/jsd_v_dist.ipynb
+++ b/nbks/jsd_v_dist.ipynb
@@ -17,120 +17,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cogent3 import load_table"
+    "import plotly.express as px\n",
+    "from cogent3 import load_table\n",
+    "\n",
+    "def make_result_table():\n",
+    "    table = load_table(\"jsd_v_dist.tsv\")\n",
+    "    table = table.with_new_column(\"p-val<0.1(%)\", lambda x: 100 * x[0]/x[1], columns=[\"p-value<0.1\", \"num\"], digits=1)\n",
+    "    return table.sorted(columns=[\"stat\", \"max_set\", \"k\"])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div class=\"c3table\">\n",
-       "\n",
-       "<style>\n",
-       ".c3table table {margin: 10px 0;}\n",
-       ".c3table tr:last-child {border-bottom: 1px solid #000;} \n",
-       ".c3table tr > th {text-align: left; padding: 0 5px;}\n",
-       ".c3table tr > td {text-align: left; padding: 5px;}\n",
-       ".c3table tr:nth-child(even) {background: #f7f7f7 !important;}\n",
-       ".c3table .ellipsis {background: rgba(0, 0, 0, .01);}\n",
-       ".c3table .index {background: rgba(161, 195, 209, 0.0); margin: 10px; font-weight: 600;}\n",
-       ".c3table .head_cell {background: rgba(161, 195, 209, 0.75); font-weight: bold; text-align: center;}\n",
-       ".c3table caption {color: rgb(250, 250, 250); background: rgba(30, 140, 200, 1); padding: 3px; white-space: nowrap; caption-side: top;}\n",
-       ".c3table .cell_title {font-weight: bold;}\n",
-       ".c3col_left { text-align: left !important; display: block;}\n",
-       ".c3col_right { text-align: right !important; display: block;}\n",
-       ".c3col_center { text-align: center !important; display: block;}\n",
-       "</style>\n",
-       "\n",
-       "<table>\n",
-       "\n",
-       "<thead class=\"head_cell\">\n",
-       "<th>k</th><th>stat</th><th>max_set</th><th>size</th><th>p-value<0.1</th><th>num</th><th>p-val<0.1(%)</th>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "<tr><td><span class=\"c3col_right\">2</span></td><td><span class=\"c3col_left\">mean_delta_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">88</span></td><td><span class=\"c3col_right\">105</span></td><td><span class=\"c3col_right\">83.8</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">4</span></td><td><span class=\"c3col_left\">mean_delta_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">102</span></td><td><span class=\"c3col_right\">106</span></td><td><span class=\"c3col_right\">96.2</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">6</span></td><td><span class=\"c3col_left\">mean_delta_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">9</span></td><td><span class=\"c3col_right\">36</span></td><td><span class=\"c3col_right\">105</span></td><td><span class=\"c3col_right\">34.3</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">8</span></td><td><span class=\"c3col_left\">mean_delta_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">37</span></td><td><span class=\"c3col_right\">105</span></td><td><span class=\"c3col_right\">35.2</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">2</span></td><td><span class=\"c3col_left\">mean_delta_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">76</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">73.1</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">4</span></td><td><span class=\"c3col_left\">mean_delta_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">93</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">89.4</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">6</span></td><td><span class=\"c3col_left\">mean_delta_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">38</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">36.5</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">8</span></td><td><span class=\"c3col_left\">mean_delta_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">50</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">48.1</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">2</span></td><td><span class=\"c3col_left\">mean_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">9</span></td><td><span class=\"c3col_right\">83</span></td><td><span class=\"c3col_right\">105</span></td><td><span class=\"c3col_right\">79.0</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">4</span></td><td><span class=\"c3col_left\">mean_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">7</span></td><td><span class=\"c3col_right\">92</span></td><td><span class=\"c3col_right\">106</span></td><td><span class=\"c3col_right\">86.8</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">6</span></td><td><span class=\"c3col_left\">mean_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">13</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">12.5</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">8</span></td><td><span class=\"c3col_left\">mean_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">6</span></td><td><span class=\"c3col_right\">15</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">14.4</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">2</span></td><td><span class=\"c3col_left\">mean_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">75</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">72.1</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">4</span></td><td><span class=\"c3col_left\">mean_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">89</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">85.6</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">6</span></td><td><span class=\"c3col_left\">mean_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">13</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">12.5</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">8</span></td><td><span class=\"c3col_left\">mean_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">16</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">15.4</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">2</span></td><td><span class=\"c3col_left\">total_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">89</span></td><td><span class=\"c3col_right\">106</span></td><td><span class=\"c3col_right\">84.0</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">4</span></td><td><span class=\"c3col_left\">total_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">103</span></td><td><span class=\"c3col_right\">106</span></td><td><span class=\"c3col_right\">97.2</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">6</span></td><td><span class=\"c3col_left\">total_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">81</span></td><td><span class=\"c3col_right\">106</span></td><td><span class=\"c3col_right\">76.4</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">8</span></td><td><span class=\"c3col_left\">total_jsd</span></td><td><span class=\"c3col_left\">False</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">98</span></td><td><span class=\"c3col_right\">106</span></td><td><span class=\"c3col_right\">92.5</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">2</span></td><td><span class=\"c3col_left\">total_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">75</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">72.1</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">4</span></td><td><span class=\"c3col_left\">total_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">5</span></td><td><span class=\"c3col_right\">95</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">91.3</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">6</span></td><td><span class=\"c3col_left\">total_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">84</span></td><td><span class=\"c3col_right\">104</span></td><td><span class=\"c3col_right\">80.8</span></td></tr>\n",
-       "<tr><td><span class=\"c3col_right\">8</span></td><td><span class=\"c3col_left\">total_jsd</span></td><td><span class=\"c3col_left\">True</span></td><td><span class=\"c3col_right\">10</span></td><td><span class=\"c3col_right\">100</span></td><td><span class=\"c3col_right\">106</span></td><td><span class=\"c3col_right\">94.3</span></td></tr>\n",
-       "</tbody>\n",
-       "</table>\n",
-       "<p>\n",
-       "24 rows x 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "============================================================================\n",
-       "k    stat              max_set    size    p-value<0.1    num    p-val<0.1(%)\n",
-       "----------------------------------------------------------------------------\n",
-       "2    mean_delta_jsd    0            10             88    105            83.8\n",
-       "4    mean_delta_jsd    0            10            102    106            96.2\n",
-       "6    mean_delta_jsd    0             9             36    105            34.3\n",
-       "8    mean_delta_jsd    0            10             37    105            35.2\n",
-       "2    mean_delta_jsd    1             5             76    104            73.1\n",
-       "4    mean_delta_jsd    1             5             93    104            89.4\n",
-       "6    mean_delta_jsd    1             5             38    104            36.5\n",
-       "8    mean_delta_jsd    1             5             50    104            48.1\n",
-       "2    mean_jsd          0             9             83    105            79.0\n",
-       "4    mean_jsd          0             7             92    106            86.8\n",
-       "6    mean_jsd          0             5             13    104            12.5\n",
-       "8    mean_jsd          0             6             15    104            14.4\n",
-       "2    mean_jsd          1             5             75    104            72.1\n",
-       "4    mean_jsd          1             5             89    104            85.6\n",
-       "6    mean_jsd          1             5             13    104            12.5\n",
-       "8    mean_jsd          1             5             16    104            15.4\n",
-       "2    total_jsd         0            10             89    106            84.0\n",
-       "4    total_jsd         0            10            103    106            97.2\n",
-       "6    total_jsd         0            10             81    106            76.4\n",
-       "8    total_jsd         0            10             98    106            92.5\n",
-       "2    total_jsd         1             5             75    104            72.1\n",
-       "4    total_jsd         1             5             95    104            91.3\n",
-       "6    total_jsd         1            10             84    104            80.8\n",
-       "8    total_jsd         1            10            100    106            94.3\n",
-       "----------------------------------------------------------------------------\n",
-       "\n",
-       "24 rows x 7 columns"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "table = load_table(\"jsd_v_dist.tsv\")\n",
-    "table = table.with_new_column(\"p-val<0.1(%)\", lambda x: 100 * x[0]/x[1], columns=[\"p-value<0.1\", \"num\"], digits=1)\n",
-    "table = table.sorted(columns=[\"stat\", \"max_set\", \"k\"])\n",
-    "table"
+    "orig = make_result_table()\n",
+    "table = orig[:, [\"k\", \"max_set\", \"stat\", \"p-val<0.1(%)\"]]\n",
+    "orig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line(table.filtered(lambda x: x == True, columns=\"max_set\"), x=\"k\", y=\"p-val<0.1(%)\", color=\"stat\", title=\"stat vs. k (max_set=True)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line(table.filtered(lambda x: x == False, columns=\"max_set\"), x=\"k\", y=\"p-val<0.1(%)\", color=\"stat\", title=\"stat vs. k (max_set=False)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -149,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
