DOC: updated notebooks

--- a/paper/nbks/jsd_v_dist.ipynb
+++ b/paper/nbks/jsd_v_dist.ipynb
@@ -21,14 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "from cogent3 import load_table\n",
-    "\n",
-    "def make_result_table():\n",
-    "    table = load_table(\"jsd_v_dist.tsv\")\n",
-    "    table = table.with_new_column(\"p-val<0.1(%)\", lambda x: 100 * x[0]/x[1], columns=[\"p-value<0.1\", \"num\"], digits=1)\n",
-    "    return table.sorted(columns=[\"stat\", \"max_set\", \"k\"])\n",
-    "\n"
+    "from cogent3 import load_table"
    ]
   },
   {
@@ -37,35 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orig = make_result_table()\n",
-    "table = orig[:, [\"k\", \"max_set\", \"stat\", \"p-val<0.1(%)\"]]\n",
-    "orig"
+    "table = load_table(\"jsd_v_dist.tsv\")\n",
+    "table = table.with_new_column(\"p-val<0.1(%)\", lambda x: 100 * x[0]/x[1], columns=[\"p-value<0.1\", \"num\"], digits=1)\n",
+    "table = table.sorted(columns=[\"stat\", \"max_set\", \"k\"])\n",
+    "table"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "px.line(table.filtered(lambda x: x == True, columns=\"max_set\"), x=\"k\", y=\"p-val<0.1(%)\", color=\"stat\", title=\"stat vs. k (max_set=True)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "px.line(table.filtered(lambda x: x == False, columns=\"max_set\"), x=\"k\", y=\"p-val<0.1(%)\", color=\"stat\", title=\"stat vs. k (max_set=False)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -84,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
