DOC: updated plugin demo

--- a/paper/nbks/plugin_demo.ipynb
+++ b/paper/nbks/plugin_demo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cogent3 import available_apps"
+    "from cogent3 import available_apps, app_help, get_app, load_aligned_seqs"
    ]
   },
   {
@@ -17,6 +17,64 @@
    "source": [
     "available_apps(\"dvgt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_help(\"dvgt_select_max\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = get_app(\n",
+    "    \"dvgt_select_nmost\",\n",
+    "    n = 5,\n",
+    "    moltype = 'dna',\n",
+    "    k = 4,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seqs = load_aligned_seqs('~/repos/Cogent3/tests/data/brca1.fasta', moltype='dna').degap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected = app(seqs)\n",
+    "selected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
