DOC: expand on plugin demo

--- a/paper/nbks/plugin_demo.ipynb
+++ b/paper/nbks/plugin_demo.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We make apps available for use within cogent3. They are obtained by the standard mechanism for getting apps."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,12 +17,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The available apps can be listed using the `available_apps()` function with the `name_filter` argument set to `\"dvgt\"`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "available_apps(\"dvgt\")"
+    "available_apps(name_filter=\"dvgt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can get help using the Cogent 3 `app_help()` system."
    ]
   },
   {
@@ -25,6 +46,13 @@
    "outputs": [],
    "source": [
     "app_help(\"dvgt_select_max\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can copy the vignette from the help display to create your first app, but note that you need to remove the type hints from the vignette."
    ]
   },
   {
@@ -70,11 +98,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "successive calls return different results as the sequence order is randomised."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "app(seqs)"
+   ]
   }
  ],
  "metadata": {
