--- a/paper/nbks/jsd_v_dist.ipynb
+++ b/paper/nbks/jsd_v_dist.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recapitulates conventional genetic distance measures\n",
+    "# Sequences selected by divergent exhibit large conventional genetic distance\n",
     "\n",
-    "`divergent` should identify sets of sequences for which their minimum genetic distance is near the upper tail of the distribution of this measure from a sampling of combinations of the same (or different size).\n",
+    "We test the expectation that sequences selected in the divergent set have a greater genetic distance than a randoml selection of the sdame number of sequences.\n",
+    "\n",
+    "If DNA sequences are homologous, then `divergent` should select sets of sequences within for which their minimum genetic distance is near the upper tail of the distribution of this measure from a sampling of combinations of the same (or different size).\n",
     "\n",
     "The data was from alignments of 106 genes from exactly 31 diverse mammal species. The matrix of all pairwise genetic distances were computed between the aligned sequences using the Paralinear distance of Lake. If the JSD measure reflects genetic distance, we expect the mean of the pairwise distances between the species identified by `divergent max` to be larger than the same number of species selected randomly. We set a minimal set size of 5 and maximal set size of 10.\n",
     "\n",
@@ -21,7 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cogent3 import load_table"
+    "import plotly.express as px\n",
+    "from cogent3 import load_table\n",
+    "\n",
+    "table = load_table(\"jsd_v_dist.tsv\")"
    ]
   },
   {
@@ -30,10 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = load_table(\"jsd_v_dist.tsv\")\n",
-    "table = table.with_new_column(\"p-val<0.1(%)\", lambda x: 100 * x[0]/x[1], columns=[\"p-value<0.1\", \"num\"], digits=1)\n",
-    "table = table.sorted(columns=[\"stat\", \"max_set\", \"k\"])\n",
-    "table"
+    "fig = px.scatter(table, x=\"k\", y=\"(p-value<0.05)%\", color=\"stat\", trendline=\"lowess\")\n",
+    "fig.update_layout(height=500, width=700)\n",
+    "fig.show()"
    ]
   }
  ],
@@ -53,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
