DOC: add notebook to generate figure

--- a/paper/nbks/jsd_v_dist.ipynb
+++ b/paper/nbks/jsd_v_dist.ipynb
@@ -26,7 +26,9 @@
     "import plotly.express as px\n",
     "from cogent3 import load_table\n",
     "\n",
-    "table = load_table(\"jsd_v_dist.tsv\")"
+    "table = load_table(\"jsd_v_dist.tsv\")\n",
+    "table.columns[\"fixed_size\"] = table.columns[\"min_size\"] == table.columns[\"max_size\"]\n",
+    "table.head()"
    ]
   },
   {
@@ -35,10 +37,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter(table, x=\"k\", y=\"(p-value<0.05)%\", color=\"stat\", trendline=\"lowess\")\n",
-    "fig.update_layout(height=500, width=700)\n",
+    "fig = px.scatter(table, x=\"k\", y=\"(p-value<0.05)%\", color=\"stat\", trendline=\"lowess\", facet_row=\"fixed_size\",\n",
+    "                 labels={\"k\": \"<i>k</i>\", \"(p-value<0.05)%\": \"% sig\", \"fixed_size\": \"Fixed Set Size\"})\n",
+    "fig.update_layout(height=600, width=700)\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
