--- a/paper/nbks/jsd_v_dist.ipynb
+++ b/paper/nbks/jsd_v_dist.ipynb
@@ -46,17 +46,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter(table, x=\"k\", y=\"(p-value<0.05)%\", color=\"stat\", trendline=\"lowess\", facet_row=\"fixed_size\",\n",
-    "                 labels={\"k\": \"<i>k</i>\", \"(p-value<0.05)%\": \"Significant %\", \"fixed_size\": \"Fixed Set Size\"})\n",
+    "fig = px.scatter(\n",
+    "    table,\n",
+    "    x=\"k\",\n",
+    "    y=\"(p-value<0.05)%\",\n",
+    "    color=\"stat\",\n",
+    "    trendline=\"lowess\",\n",
+    "    facet_row=\"fixed_size\",\n",
+    "    labels={\n",
+    "        \"k\": \"<i>k</i>\",\n",
+    "        \"(p-value<0.05)%\": \"Significant %\",\n",
+    "        \"fixed_size\": \"Fixed Set Size\",\n",
+    "    },\n",
+    ")\n",
     "d_jsd = \"δ<sub>JSD</sub>\"\n",
     "stat_names = dict(stdev=f\"std({d_jsd})\", cov=f\"cov({d_jsd})\")\n",
-    "tickfont=dict(size=16)\n",
-    "titlefont=dict(size=20)\n",
-    "legend=dict(title=dict(text=\"\"),\n",
-    "            font=dict(size=17),\n",
-    "            tracegroupgap=10)\n",
-    "fig.update_layout(height=1200, width=1400, legend=legend,\n",
-    "                  xaxis=dict(tickfont=tickfont, titlefont=titlefont))\n",
+    "tickfont = dict(size=16)\n",
+    "titlefont = dict(size=20)\n",
+    "legend = dict(title=dict(text=\"\"), font=dict(size=17), tracegroupgap=10)\n",
+    "fig.update_layout(\n",
+    "    height=1200,\n",
+    "    width=1400,\n",
+    "    legend=legend,\n",
+    "    xaxis=dict(tickfont=tickfont, titlefont=titlefont),\n",
+    ")\n",
     "fig.for_each_yaxis(lambda yaxis: yaxis.update(tickfont=tickfont, titlefont=titlefont))\n",
     "fig.for_each_trace(lambda t: t.update(name=stat_names.get(t.name, t.name)))\n",
     "fig.update_traces(marker=dict(size=12, opacity=0.8))\n",
@@ -83,52 +96,60 @@
     "from plotly.graph_objects import Scatter, Figure\n",
     "from cogent3 import load_table, make_table\n",
     "\n",
-    "        \n",
+    "\n",
     "def make_plot(table):\n",
-    "    # this has to be done manually because plotly express has a \n",
+    "    # this has to be done manually because plotly express has a\n",
     "    # bug with error bars and multiple traces\n",
-    "    tickfont=dict(size=16)\n",
-    "    titlefont=dict(size=20)\n",
-    "    legend=dict(title=dict(text=\"\"),\n",
-    "            font=dict(size=17),\n",
-    "            tracegroupgap=10)\n",
+    "    tickfont = dict(size=16)\n",
+    "    titlefont = dict(size=20)\n",
+    "    legend = dict(title=dict(text=\"\"), font=dict(size=17), tracegroupgap=10)\n",
     "    stdev = table.filtered(lambda x: x == \"stdev\", columns=\"stat\")\n",
     "    cov = table.filtered(lambda x: x == \"cov\", columns=\"stat\")\n",
     "    fig = Figure()\n",
-    "    st = Scatter(x=stdev.columns[\"k\"],\n",
-    "                 y=stdev.columns[\"mean_size\"],\n",
-    "                 mode=\"markers\",\n",
-    "                 name=\"stdev\",\n",
-    "                 error_y=dict(type='data',\n",
-    "                              array=stdev.columns['error_above'].tolist(),\n",
-    "                              arrayminus=stdev.columns['error_below'].tolist()))\n",
+    "    st = Scatter(\n",
+    "        x=stdev.columns[\"k\"],\n",
+    "        y=stdev.columns[\"mean_size\"],\n",
+    "        mode=\"markers\",\n",
+    "        name=\"stdev\",\n",
+    "        error_y=dict(\n",
+    "            type=\"data\",\n",
+    "            array=stdev.columns[\"error_above\"].tolist(),\n",
+    "            arrayminus=stdev.columns[\"error_below\"].tolist(),\n",
+    "        ),\n",
+    "    )\n",
     "    fig.add_trace(st)\n",
-    "    cv = Scatter(x=cov.columns[\"k\"], \n",
-    "                 y=cov.columns[\"mean_size\"], \n",
-    "                 mode=\"markers\", \n",
-    "                 name=\"cov\",\n",
-    "                 error_y=dict(type='data', \n",
-    "                              array=cov.columns['error_above'].tolist(),\n",
-    "                              arrayminus=cov.columns['error_below'].tolist()))\n",
+    "    cv = Scatter(\n",
+    "        x=cov.columns[\"k\"],\n",
+    "        y=cov.columns[\"mean_size\"],\n",
+    "        mode=\"markers\",\n",
+    "        name=\"cov\",\n",
+    "        error_y=dict(\n",
+    "            type=\"data\",\n",
+    "            array=cov.columns[\"error_above\"].tolist(),\n",
+    "            arrayminus=cov.columns[\"error_below\"].tolist(),\n",
+    "        ),\n",
+    "    )\n",
     "    fig.add_trace(cv)\n",
     "    fig.update_layout(\n",
-    "        height=600, width=1400,\n",
-    "    xaxis=dict(\n",
-    "        title='<i>k</i>',\n",
-    "        titlefont=titlefont,\n",
-    "        tickfont=tickfont,\n",
-    "    ),\n",
-    "    yaxis=dict(\n",
-    "        title='Mean Size',\n",
-    "        titlefont=titlefont,\n",
-    "        tickfont=tickfont,\n",
-    "    ),\n",
-    "    legend=legend\n",
-    ")\n",
+    "        height=600,\n",
+    "        width=1400,\n",
+    "        xaxis=dict(\n",
+    "            title=\"<i>k</i>\",\n",
+    "            titlefont=titlefont,\n",
+    "            tickfont=tickfont,\n",
+    "        ),\n",
+    "        yaxis=dict(\n",
+    "            title=\"Mean Size\",\n",
+    "            titlefont=titlefont,\n",
+    "            tickfont=tickfont,\n",
+    "        ),\n",
+    "        legend=legend,\n",
+    "    )\n",
     "    fig.update_traces(marker=dict(size=12))\n",
     "    fig.update_annotations(font=titlefont)\n",
     "\n",
     "    return fig\n",
+    "\n",
     "\n",
     "def calc_upper_lower_bounds(x, y, lower, upper):\n",
     "    assert lower <= x <= upper, f\"invalid {x=}, {lower=}, {upper=}\"\n",
@@ -144,29 +165,34 @@
     "    else:\n",
     "        diff = upper - x\n",
     "        return (y - diff), upper - x\n",
-    "    \n",
+    "\n",
     "\n",
     "def group_by(table, one_stat):\n",
     "    columns = [\"k\", \"min_size\", \"max_size\", \"stat\"]\n",
     "    distinct = table.distinct_values(columns)\n",
-    "    \n",
+    "\n",
     "    results = []\n",
     "    for group in distinct:\n",
-    "        _, lower, upper, _ = group \n",
+    "        _, lower, upper, _ = group\n",
     "        subtable = table.filtered(lambda x: tuple(x) == group, columns=columns)\n",
     "        sizes = subtable.columns[\"size\"]\n",
     "        mean, std = sizes.mean(), sizes.std(ddof=1)\n",
     "        lo, hi = calc_upper_lower_bounds(mean, std, lower, upper)\n",
-    "        results.append(list(group) + [mean, std, lo, hi, sizes.shape[0]]) \n",
-    "    \n",
-    "    table = make_table(header=columns + [\"mean_size\", \"std_size\", \"error_below\", \"error_above\", \"n\"], rows=results)\n",
+    "        results.append(list(group) + [mean, std, lo, hi, sizes.shape[0]])\n",
+    "\n",
+    "    table = make_table(\n",
+    "        header=columns + [\"mean_size\", \"std_size\", \"error_below\", \"error_above\", \"n\"],\n",
+    "        rows=results,\n",
+    "    )\n",
     "    table = table.sorted(columns=(\"stat\", \"k\"))\n",
     "    if one_stat:\n",
     "        table = table.filtered(lambda x: x == \"stdev\", columns=\"stat\")\n",
     "    return table\n",
-    "    \n",
     "\n",
-    "table = load_table(\"/Users/gavin/repos/Divergent/paper/nbks/jsd_v_dist-sizes.tsv\").filtered(lambda x: x == 5, columns=\"min_size\")\n",
+    "\n",
+    "table = load_table(\n",
+    "    \"/Users/gavin/repos/Divergent/paper/nbks/jsd_v_dist-sizes.tsv\"\n",
+    ").filtered(lambda x: x == 5, columns=\"min_size\")\n",
     "table = group_by(table, one_stat=False)\n",
     "fig = make_plot(table)\n",
     "outpath = project_path.FIG_DIR / \"jsd_v_dist-sizes.png\"\n",
