STY: ruff'ed py and ipynb files

--- a/paper/nbks/benchmark.ipynb
+++ b/paper/nbks/benchmark.ipynb
@@ -26,9 +26,9 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "from cogent3 import load_table, make_table\n",
     "\n",
-    "import plotly.graph_objects as go"
+    "import plotly.graph_objects as go\n",
+    "from cogent3 import load_table, make_table"
    ]
   },
   {
