--- a/paper/nbks/jsd_v_dist.ipynb
+++ b/paper/nbks/jsd_v_dist.ipynb
@@ -23,8 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import project_path\n",
     "import plotly.express as px\n",
+    "import project_path\n",
     "from cogent3 import load_table\n",
     "\n",
     "table = load_table(\"jsd_v_dist-stats.tsv\")\n",
@@ -93,8 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotly.graph_objects import Scatter, Figure\n",
     "from cogent3 import load_table, make_table\n",
+    "from plotly.graph_objects import Figure, Scatter\n",
     "\n",
     "\n",
     "def make_plot(table):\n",
@@ -157,14 +157,13 @@
     "    hi = x + y\n",
     "    if lo >= lower and hi <= upper:\n",
     "        return y, y\n",
-    "    elif lo <= lower and hi >= upper:\n",
+    "    if lo <= lower and hi >= upper:\n",
     "        return x - lower, upper - x\n",
-    "    elif lo < lower:\n",
+    "    if lo < lower:\n",
     "        diff = x - lower\n",
     "        return x - lower, y - diff\n",
-    "    else:\n",
-    "        diff = upper - x\n",
-    "        return (y - diff), upper - x\n",
+    "    diff = upper - x\n",
+    "    return (y - diff), upper - x\n",
     "\n",
     "\n",
     "def group_by(table, one_stat):\n",
@@ -191,7 +190,7 @@
     "\n",
     "\n",
     "table = load_table(\n",
-    "    \"/Users/gavin/repos/Divergent/paper/nbks/jsd_v_dist-sizes.tsv\"\n",
+    "    \"/Users/gavin/repos/Divergent/paper/nbks/jsd_v_dist-sizes.tsv\",\n",
     ").filtered(lambda x: x == 5, columns=\"min_size\")\n",
     "table = group_by(table, one_stat=False)\n",
     "fig = make_plot(table)\n",
