--- a/paper/nbks/plugin_demo.ipynb
+++ b/paper/nbks/plugin_demo.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cogent3 import available_apps, app_help, get_app, load_aligned_seqs"
+    "from cogent3 import app_help, available_apps, get_app, load_aligned_seqs"
    ]
   },
   {
@@ -63,9 +63,9 @@
    "source": [
     "app = get_app(\n",
     "    \"dvgt_select_nmost\",\n",
-    "    n = 5,\n",
-    "    moltype = 'dna',\n",
-    "    k = 4,\n",
+    "    n=5,\n",
+    "    moltype=\"dna\",\n",
+    "    k=4,\n",
     ")"
    ]
   },
@@ -84,7 +84,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs = load_aligned_seqs('~/repos/Cogent3/tests/data/brca1.fasta', moltype='dna').degap()"
+    "seqs = load_aligned_seqs(\n",
+    "    \"~/repos/Cogent3/tests/data/brca1.fasta\",\n",
+    "    moltype=\"dna\",\n",
+    ").degap()"
    ]
   },
   {
