DOC: updated plugin demo and wrote figure showing sslected edges

--- a/paper/nbks/plugin_demo.ipynb
+++ b/paper/nbks/plugin_demo.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cogent3 import app_help, available_apps, get_app, load_aligned_seqs"
+    "from cogent3 import available_apps"
    ]
   },
   {
@@ -45,6 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cogent3.app import app_help\n",
+    "\n",
     "app_help(\"dvgt_select_max\")"
    ]
   },
@@ -52,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can copy the vignette from the help display to create your first app, but note that you need to remove the type hints from the vignette."
+    "You can copy the vignette from the help display to create your app instance."
    ]
   },
   {
@@ -61,33 +63,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cogent3.app import get_app\n",
+    "\n",
     "app = get_app(\n",
-    "    \"dvgt_select_nmost\",\n",
-    "    n=5,\n",
+    "    \"dvgt_select_max\",\n",
+    "    min_size=5,\n",
+    "    max_size=10,\n",
+    "    stat=\"stdev\",\n",
     "    moltype=\"dna\",\n",
-    "    k=4,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    k=10,\n",
+    "    seed=None,\n",
+    ")\n",
     "app"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now load a single alignment from the included sample data and apply the Divergent MAX plug-in to those sequences after removing gaps. (This alignment was chosen because the estimated tree was not completely terrible!)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs = load_aligned_seqs(\n",
-    "    \"~/repos/Cogent3/tests/data/brca1.fasta\",\n",
-    "    moltype=\"dna\",\n",
-    ").degap()"
+    "from cogent3 import get_app, open_data_store\n",
+    "\n",
+    "in_data = open_data_store(\"mammals-aligned.zip\", suffix=\"fa\", mode=\"r\")\n",
+    "loader = get_app(\"load_aligned\", moltype=\"dna\")\n",
+    "aln = loader(in_data[64])\n",
+    "seqs = aln.degap()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Note**\n",
+    "> Successive calls to the app can return different results as the sequence order is randomised."
    ]
   },
   {
@@ -104,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "successive calls return different results as the sequence order is randomised."
+    "We show how the sampled sequences are dispersed across the phylogeny by first estimating a tree using NJ based on the paralinear distance."
    ]
   },
   {
@@ -113,7 +129,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app(seqs)"
+    "import project_path\n",
+    "\n",
+    "dnd = (\n",
+    "    aln.quick_tree(calc=\"paralinear\")\n",
+    "    .rooted_with_tip(\"Platypus\")\n",
+    "    .get_figure(width=1400, height=1600)\n",
+    ")\n",
+    "dnd.tip_font = dict(size=32, family=\"Inconsolata\")\n",
+    "dnd.label_pad = 0.003\n",
+    "dnd.line_width = 3\n",
+    "dnd.scale_bar = None\n",
+    "dnd.style_edges(edges=selected.names, line={\"color\": \"red\", \"width\": 3})\n",
+    "outpath = project_path.FIG_DIR / \"selected_edges.png\"\n",
+    "dnd.write(outpath)"
    ]
   }
  ],
