DOC: starting work on benchmarking

--- a/paper/nbks/benchmark.ipynb
+++ b/paper/nbks/benchmark.ipynb
@@ -10,7 +10,7 @@
     "- load the sequences from compressed files and convert them into  `SeqRecord` objects\n",
     "- identify the divergent set\n",
     "\n",
-    "Each condition was run 5 times with the sequences were randomly drawn without replacement.\n",
+    "Each condition was run 5 times with the sequences randomly drawn without replacement.\n",
     "\n",
     "# Synopsis\n",
     "\n",
