--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,8 +1,39 @@
+
+@article{lin.1991.ieeetrans.inf.theory,
+	author = {Lin, J.},
+	journal = {IEEE Transactions on Information Theory},
+	month = jan,
+	number = {1},
+	pages = {145--151},
+	title = {Divergence measures based on the {Shannon} entropy},
+	volume = {37},
+	year = {1991}}
+
+@article{widmann.2006.molcellproteomics,
+	author = {Widmann, Jeremy and Hamady, Micah and Knight, Rob},
+	journal = {Mol Cell Proteomics},
+	number = {8},
+	pages = {1520--1532},
+	title = {{DivergentSet}, a tool for picking non-redundant sequences from large sequence collections.},
+	volume = {5},
+	year = {2006}}
+
+@article{schneider.1990.nucleicacidsres.,
+	author = {Schneider, T D and Stephens, R M},
+	journal = {Nucleic acids research},
+	month = oct,
+	number = {20},
+	pages = {6097--100},
+	title = {Sequence logos: a new way to display consensus sequences.},
+	volume = {18},
+	year = {1990}}
+
 @article{balaban.2019.plosone,
 	author = {Balaban, Metin and Moshiri, Niema and Mai, Uyen and Jia, Xingfan and Mirarab, Siavash},
-	journal = {PLoS ONE},
+	journal = {PLOS ONE},
+	month = aug,
 	number = {8},
 	pages = {e0221068},
-	title = {{TreeCluster}: {Clustering} Biological Sequences Using Phylogenetic Trees},
+	title = {{TreeCluster}: {Clustering} biological sequences using phylogenetic trees},
 	volume = {14},
 	year = {2019}}
