DOC: added compute-time figure

--- a/paper/nbks/benchmark.ipynb
+++ b/paper/nbks/benchmark.ipynb
@@ -14,9 +14,7 @@
     "\n",
     "# Synopsis\n",
     "\n",
-    "Performance is approximately linear with the number of sequences.\n",
-    "\n",
-    "**TODO** actually plot the best fit line, not my little hack."
+    "Performance is approximately linear with the number of sequences for both the divergent `prep` and `max` steps."
    ]
   },
   {
@@ -25,38 +23,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
+    "import plotly.express as px\n",
+    "import project_path\n",
+    "from cogent3 import load_table, make_table\n",
     "\n",
-    "import plotly.graph_objects as go\n",
-    "from cogent3 import load_table, make_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def summarise(table):\n",
-    "    columns = \"k\", \"num_seqs\"\n",
+    "\n",
+    "def _cast_element(row):\n",
+    "    try:\n",
+    "        return tuple(row)\n",
+    "    except TypeError:\n",
+    "        return int(row)\n",
+    "\n",
+    "\n",
+    "def group_by(table, columns, quant_col, sort_cols):\n",
+    "    columns = tuple(columns)\n",
     "    distinct = table.distinct_values(columns)\n",
-    "    data = defaultdict(list)\n",
-    "    for k, num_reps in distinct:\n",
-    "        subtable = table.filtered(lambda x: tuple(x) == (k, num_reps), columns=columns)\n",
-    "        time_s2r = subtable.columns[\"time(s2r)\"]\n",
-    "        time_maxd = subtable.columns[\"time(maxd)\"]\n",
-    "        data[\"k\"].append(k)\n",
-    "        data[\"num_seqs\"].append(num_reps)\n",
-    "        data[\"mean(s2r)\"].append(time_s2r.mean())\n",
-    "        data[\"stdev(s2r)\"].append(time_s2r.std(ddof=1))\n",
-    "        data[\"mean(maxd)\"].append(time_maxd.mean())\n",
-    "        data[\"stdev(maxd)\"].append(time_maxd.std(ddof=1))\n",
-    "    return make_table(data=data).sorted(columns=columns)\n",
+    "    one_col = len(columns) == 1\n",
+    "    results = []\n",
+    "    for group in distinct:\n",
+    "        subtable = table.filtered(lambda x: _cast_element(x) == group, columns=columns)\n",
+    "        quants = subtable.columns[quant_col]\n",
+    "        mean, std = quants.mean(), quants.std(ddof=1)\n",
+    "        results.append(\n",
+    "            ([group] if one_col else list(group)) + [mean, std, quants.shape[0]],\n",
+    "        )\n",
+    "\n",
+    "    header = list(columns) + [f\"mean_{quant_col}\", f\"std_{quant_col}\", \"n\"]\n",
+    "    table = make_table(\n",
+    "        header=list(columns) + [f\"mean_{quant_col}\", f\"std_{quant_col}\", \"n\"],\n",
+    "        rows=results,\n",
+    "    )\n",
+    "    table = table.sorted(columns=sort_cols)\n",
+    "    return table\n",
     "\n",
     "\n",
     "table = load_table(\"benchmark.tsv\")\n",
-    "summary = summarise(table)\n",
-    "summary"
+    "st = table.filtered(lambda x: x == \"prep\", columns=\"command\").get_columns(\n",
+    "    (\"numseqs\", \"time(s)\"),\n",
+    ")\n",
+    "prep_time = group_by(st, (\"numseqs\",), \"time(s)\", \"numseqs\")"
    ]
   },
   {
@@ -65,35 +70,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_fig(table, k, stat, title):\n",
-    "    mers = table.filtered(f\"k == {k}\")\n",
-    "    nseqs = mers.columns[\"num_seqs\"]\n",
-    "    stats = mers.columns[f\"mean({stat})\"]\n",
-    "    tr_data = go.Scatter(\n",
-    "        name=\"observed\",\n",
-    "        x=nseqs,\n",
-    "        y=stats,\n",
-    "        error_y=dict(\n",
-    "            type=\"data\",  # value of error bar given in data coordinates\n",
-    "            array=mers.columns[f\"stdev({stat})\"],\n",
-    "            visible=True,\n",
-    "        ),\n",
-    "    )\n",
-    "    tr_diag = go.Scatter(\n",
-    "        name=\"linear\",\n",
-    "        x=(nseqs.min(), nseqs.max()),\n",
-    "        y=(stats.min(), stats.max()),\n",
-    "    )\n",
-    "    return go.Figure(\n",
-    "        data=[tr_data, tr_diag],\n",
-    "        layout=dict(\n",
-    "            title=title,\n",
-    "            xaxis=dict(title=\"number of sequences\"),\n",
-    "            yaxis=dict(title=\"mean time (seconds)\"),\n",
-    "            width=500,\n",
-    "            height=500,\n",
-    "        ),\n",
-    "    )"
+    "px.scatter(\n",
+    "    prep_time,\n",
+    "    x=\"numseqs\",\n",
+    "    y=\"mean_time(s)\",\n",
+    "    error_y=\"std_time(s)\",\n",
+    "    labels={\"mean_time(s)\": \"Seconds\", \"numseqs\": \"Number of sequences\"},\n",
+    "    trendline=\"ols\",\n",
+    ")"
    ]
   },
   {
@@ -102,15 +86,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = get_fig(summary, 3, \"s2r\", \"Converting sequences to records\")\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Identifying the maximally divergent set"
+    "st = table.filtered(lambda x: x == max, columns=\"command\").get_columns(\n",
+    "    (\"numseqs\", \"k\", \"time(s)\"),\n",
+    ")\n",
+    "max_time = group_by(st, (\"numseqs\", \"k\"), \"time(s)\", (\"numseqs\", \"k\"))\n",
+    "st = max_time.filtered(lambda x: str(x) in \"28\", columns=\"k\")\n",
+    "st.columns[\"k\"] = st.columns[\"k\"].astype(str)\n",
+    "\n",
+    "tickfont = dict(size=16)\n",
+    "titlefont = dict(size=20)\n",
+    "legend = dict(title=dict(text=\"<i>k</i>\"), font=dict(size=17), tracegroupgap=10)\n",
+    "\n",
+    "fig = px.scatter(\n",
+    "    st,\n",
+    "    x=\"numseqs\",\n",
+    "    y=\"mean_time(s)\",\n",
+    "    error_y=\"std_time(s)\",\n",
+    "    color=\"k\",\n",
+    "    labels={\"mean_time(s)\": \"Seconds\", \"numseqs\": \"Number of sequences\"},\n",
+    "    trendline=\"ols\",\n",
+    ")\n",
+    "fig.update_layout(\n",
+    "    height=600,\n",
+    "    width=1400,\n",
+    "    xaxis=dict(\n",
+    "        title=\"Number of Sequences\",\n",
+    "        titlefont=titlefont,\n",
+    "        tickfont=tickfont,\n",
+    "    ),\n",
+    "    yaxis=dict(\n",
+    "        title=\"Mean time (seconds)\",\n",
+    "        titlefont=titlefont,\n",
+    "        tickfont=tickfont,\n",
+    "    ),\n",
+    "    legend=legend,\n",
+    ")\n",
+    "fig.update_traces(marker=dict(size=12))\n",
+    "\n",
+    "outpath = project_path.FIG_DIR / \"compute_time.png\"\n",
+    "fig.write_image(outpath)"
    ]
   },
   {
@@ -119,8 +133,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = get_fig(summary, 7, \"maxd\", \"Identifying the most divergent sequences\")\n",
-    "fig.show()"
+    "st = max_time.filtered(lambda x: str(x) == \"200\", columns=\"numseqs\")\n",
+    "st.columns[\"numseqs\"] = st.columns[\"numseqs\"].astype(str)\n",
+    "px.scatter(\n",
+    "    st,\n",
+    "    x=\"k\",\n",
+    "    y=\"mean_time(s)\",\n",
+    "    error_y=\"std_time(s)\",\n",
+    "    color=\"numseqs\",\n",
+    "    labels={\"mean_time(s)\": \"Seconds\", \"k\": \"<i>k</i>\"},\n",
+    "    trendline=\"ols\",\n",
+    ")"
    ]
   }
  ],
