--- a/paper/nbks/jsd_v_dist.ipynb
+++ b/paper/nbks/jsd_v_dist.ipynb
@@ -197,7 +197,9 @@
     "fig.update_layout(legend=legend, width=1600, height=1200)\n",
     "fig.for_each_trace(lambda t: t.update(name=stat_names.get(t.name, t.name)))\n",
     "fig.update_traces(\n",
-    "    selector=dict(name=stat_names[\"cov\"]), marker=cols[\"cov\"] | marker, line=cols[\"cov\"]\n",
+    "    selector=dict(name=stat_names[\"cov\"]),\n",
+    "    marker=cols[\"cov\"] | marker,\n",
+    "    line=cols[\"cov\"],\n",
     ")\n",
     "fig.update_traces(\n",
     "    selector=dict(name=stat_names[\"stdev\"]),\n",
