STY: ruff applied to paper scripts and notebooks

--- a/paper/nbks/ctree.ipynb
+++ b/paper/nbks/ctree.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import project_path\n",
     "import cogent3\n",
     "import plotly.express as px\n",
+    "import project_path\n",
     "\n",
     "color_discrete_sequence = px.colors.sequential.Rainbow\n",
     "\n",
@@ -22,7 +22,7 @@
     "\n",
     "    inpath = project_path.PAPER_DIR / \"nbks\" / \"ctree\" / \"out\" / fname\n",
     "    lines = [l.split(\"\\t\") for l in inpath.read_text().splitlines()]\n",
-    "    data = dict(zip(header, zip(*lines)))\n",
+    "    data = dict(zip(header, zip(*lines, strict=False), strict=False))\n",
     "    for name, vals in data.items():\n",
     "        data[name] = cast_str_to_array(vals)\n",
     "    return cogent3.make_table(header=header, data=data)\n",
@@ -30,7 +30,8 @@
     "\n",
     "def get_plot_for(*, x_axis, limit_to, colour, legend_title, log_x):\n",
     "    table = load_table(\n",
-    "        \"results_with_ls.tsv\", [\"k\", \"ss\", \"cpus\", \"time\", \"lnL\", \"tree\"]\n",
+    "        \"results_with_ls.tsv\",\n",
+    "        [\"k\", \"ss\", \"cpus\", \"time\", \"lnL\", \"tree\"],\n",
     "    )\n",
     "    table = table.get_columns([c for c in table.header if c != \"tree\"])\n",
     "    table = table.filtered(lambda x: int(x) in limit_to, columns=colour)\n",
