--- a/paper/nbks/jsd_v_dist.ipynb
+++ b/paper/nbks/jsd_v_dist.ipynb
@@ -202,7 +202,10 @@
     "\n",
     "fig.update_yaxes(title_text=\"<b>Significant %</b>\", row=1, col=1, title_font=titlefont)\n",
     "fig.update_yaxes(\n",
-    "    title_text=\"<b>Mean Number Selected</b>\", row=2, col=1, title_font=titlefont\n",
+    "    title_text=\"<b>Mean Number Selected</b>\",\n",
+    "    row=2,\n",
+    "    col=1,\n",
+    "    title_font=titlefont,\n",
     ")\n",
     "fig.update_xaxes(title_text=\"<b><i>k</i></b>\", row=2, col=1, title_font=titlefont)\n",
     "fig.update_layout(legend=legend, width=1600, height=1200)\n",
