--- a/paper/nbks/plugin_demo.ipynb
+++ b/paper/nbks/plugin_demo.ipynb
@@ -96,7 +96,9 @@
     "from cogent3 import get_app, open_data_store\n",
     "\n",
     "in_data = open_data_store(\n",
-    "    project_path.DATA_DIR / \"mammals-aligned.zip\", suffix=\"fa\", mode=\"r\"\n",
+    "    project_path.DATA_DIR / \"mammals-aligned.zip\",\n",
+    "    suffix=\"fa\",\n",
+    "    mode=\"r\",\n",
     ")\n",
     "loader = get_app(\"load_aligned\", moltype=\"dna\")\n",
     "aln = loader(in_data[64])"
