--- a/paper/nbks/jsd_v_dist.ipynb
+++ b/paper/nbks/jsd_v_dist.ipynb
@@ -39,7 +39,7 @@
     "legend = dict(title=dict(text=\"\"), font=dict(size=28), tracegroupgap=10)\n",
     "\n",
     "\n",
-    "table = load_table(project_path.RESULT_DIR / \"jsd_v_dist-stats.tsv\")\n",
+    "table = load_table(project_path.RESULT_DIR / \"jsd_v_dist-max.tsv\")\n",
     "# eliminating rows where min_size == max_size\n",
     "table = table.filtered(lambda x: len(set(x)) > 1, columns=[\"min_size\", \"max_size\"])\n",
     "other = load_table(project_path.RESULT_DIR / \"jsd_v_dist-nmost.tsv\")\n",
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "fig_stat = px.scatter(\n",
-    "    table,\n",
+    "    table.to_pandas(),\n",
     "    x=\"k\",\n",
     "    y=\"(p-value<0.05)%\",\n",
     "    color=\"stat\",\n",
@@ -256,14 +256,14 @@
     "    font=titlefont,\n",
     ")\n",
     "outpath = project_path.FIG_DIR / \"jsd_v_dist.pdf\"\n",
-    "fig.show()\n",
-    "# write_pdf(fig, outpath)"
+    "# fig.show(renderer=\"notebook\")\n",
+    "write_pdf(fig, outpath)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dvgt",
+   "display_name": "dvgt313",
    "language": "python",
    "name": "python3"
   },
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.1"
   },
   "orig_nbformat": 4
  },
