DOC: make figure legend consistent

--- a/paper/nbks/synthetic_known.ipynb
+++ b/paper/nbks/synthetic_known.ipynb
@@ -88,6 +88,12 @@
     "fig.update_yaxes(tickfont=tickfont, row=2, col=1, title_font=titlefont)\n",
     "fig.update_xaxes(title_font=titlefont, tickfont=tickfont)\n",
     "\n",
+    "d_jsd = \"δ<sub>JSD</sub>\"\n",
+    "stat_names = dict(stdev=f\"std({d_jsd})\", cov=f\"cov({d_jsd})\", JSD=r\"JSD(<b>F</b>)\")\n",
+    "\n",
+    "for name in [\"stdev\", \"cov\"]:\n",
+    "    fig.update_traces(selector={\"name\": name}, name=stat_names[name])\n",
+    "\n",
     "for ann in fig.layout.annotations:\n",
     "    ann[\"textangle\"] = 90\n",
     "    ann[\"font\"].update(tickfont)\n",
