--- a/paper/nbks/plugin_demo.ipynb
+++ b/paper/nbks/plugin_demo.ipynb
@@ -96,7 +96,7 @@
     "from cogent3 import get_app, open_data_store\n",
     "\n",
     "in_data = open_data_store(\n",
-    "    project_path.DATA_DIR / \"mammals-aligned.zip\",\n",
+    "    project_path.DATA_DIR / \"mammal_orths_31_aligned.zip\",\n",
     "    suffix=\"fa\",\n",
     "    mode=\"r\",\n",
     ")\n",
@@ -141,7 +141,7 @@
     "\n",
     "dnd = (\n",
     "    aln.quick_tree(calc=\"paralinear\")\n",
-    "    .rooted_with_tip(\"Platypus\")\n",
+    "    .rooted_with_tip(\"ornithorhynchus-anatinus\")\n",
     "    .get_figure(width=1400, height=1600)\n",
     ")\n",
     "dnd.tip_font = dict(size=32, family=\"Inconsolata\")\n",
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using ``a `dvs` app to estimate a phylogeny from unaligned sequences"
+    "## Using a `dvs` app to estimate a phylogeny from unaligned sequences"
    ]
   },
   {
@@ -178,13 +178,14 @@
    "source": [
     "ctree = get_app(\"dvs_ctree\")\n",
     "tree = ctree(aln)\n",
+    "tree = tree.rooted_with_tip(\"ornithorhynchus-anatinus\")\n",
     "tree.get_figure(width=700, height=800).show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dvgt",
+   "display_name": "dvgt313",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
