MAINT: updated iq-tree experiment to use piqtree

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -239,3 +239,40 @@
 	title = {Some probabilistic and statistical problems in the analysis of {DNA} sequences.},
 	volume = {17},
 	year = {1986}}
+
+@software{ensembl-tui,
+  author       = {Gavin Huttley and
+                  Hua Ying and
+                  Arne Becker and
+                  Stefano Giorgetti},
+  title        = {ensembl\_tui: version 0.2.1},
+  month        = mar,
+  year         = 2025,
+  publisher    = {Zenodo},
+  version      = {0.2.1},
+  doi          = {10.5281/zenodo.15098646},
+  url          = {https://doi.org/10.5281/zenodo.15098646},
+  }
+
+@software{cogent3,
+  author       = {Gavin Huttley and
+                  Katherine Caley and
+                  Nick-Foto and
+                  Stephen Ka-Wah Ma and
+                  Moses Koh and
+                  Richard Morris and
+                  Robert McArthur and
+                  Fred Jaya and
+                  Peter Maxwell and
+                  James Martini and
+                  Thomas La and
+                  Yapeng Lang
+},
+  title        = {cogent3: version 2025.3.22a4},
+  month        = mar,
+  year         = 2025,
+  publisher    = {Zenodo},
+  version      = {2025.3.22a4},
+  doi          = {10.5281/zenodo.15094004},
+  url          = {https://doi.org/10.5281/zenodo.15094004},
+}
