--- a/paper/nbks/ctree.ipynb
+++ b/paper/nbks/ctree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "    iqtree = load_table(\"iqtree_with_ls.tsv\", [\"time\", \"lnL\", \"tree\"])\n",
     "    iqtree_lnL = iqtree.columns[\"lnL\"][0]\n",
     "    fig = px.line(\n",
-    "        table,\n",
+    "        table.to_pandas(),\n",
     "        x=x_axis,\n",
     "        y=\"lnL\",\n",
     "        color=colour,\n",
@@ -87,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = make_likelihood_vs_k()\n",
-    "fig.show()\n",
-    "# write_pdf(fig, project_path.FIG_DIR / \"likelihood_vs_ss_for_k.pdf\")"
+    "# fig.show()\n",
+    "write_pdf(fig, project_path.FIG_DIR / \"likelihood_vs_ss_for_k.pdf\")"
    ]
   },
   {
@@ -103,14 +103,14 @@
    "outputs": [],
    "source": [
     "fig = make_likelihood_vs_ss()\n",
-    "fig.show()\n",
-    "# write_pdf(fig, project_path.FIG_DIR / \"likelihood_vs_k_for_ss.pdf\")"
+    "# fig.show()s\n",
+    "write_pdf(fig, project_path.FIG_DIR / \"likelihood_vs_k_for_ss.pdf\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dvgt",
+   "display_name": "dvgt313",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
